[package]
name = "demo-sink"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/autocore-ai/zenoh-flow.git", branch = "master" }
async-std = { version = "=1.9.0", features = ["attributes"] }
async-trait = "0.1.50"

[lib]
crate-type = ["cdylib"]
