[package]
name = "demo-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/eclipse-zenoh/zenoh-flow.git", branch = "master" }
serde = { version = "1.0.55", features = ["derive"] }
r2r = "0.5.2"

cxx = "1.0.52"
autocxx = "0.11.1"

[build-dependencies]
autocxx-build = "0.11.1"
