[package]
name = "zenoh-flow-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zenoh-flow = { git = "https://github.com/autocore-ai/zenoh-flow.git", branch = "master" }
serde = { version = "1.0.130", features = ["derive"] }
